# skyowed

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MOBILE.md  NATIVE_PATCHES.md  PROGRESS.md  README.md  SECURITY.md  STORE_LISTING.md  TODO-MOBILE.md  TODO.md  afterCheck.md  capacitor.config.ts  next.config.mjs  package-lock.json  package.json  package.json.scripts.patch.md  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: ci.yml
android/app/: build.gradle
app/: globals.css  layout.tsx  page.tsx
docs/: REQUIREMENTS.md  ROADMAP.md  USER_STORIES.md
games/PixelMots/: CMakeLists.txt  Makefile  README.md  main.cpp
lib/: eligibility.ts  haversine.ts  rules.ts
plan/: README.md
plan/01_master_plan/: MASTER_PLAN.md
plan/02_legal_rules/: 01_EU261.md  02_UK261.md  03_US_rules.md  04_Australia_rules.md
plan/03_eligibility_logic/: DECISION_TREE.md  FLOWCHART.txt
plan/04_letter_templates/: DE_claim_letter.md  EN_claim_letter.md  ES_claim_letter.md  FR_claim_letter.md  VARIABLES_GUIDE.md
plan/05_design/: DESIGN_SYSTEM.md  USER_FLOW.md
plan/06_tech_stack/: NOCODE_ALTERNATIVE.md  STACK.md
plan/07_database/: supabase_schema.sql
plan/08_apis/: FLIGHT_DATA_APIS.md
plan/09_airlines/: AIRLINES_SEED.json  AIRLINE_CLAIMS_CONTACTS.md
plan/10_go_to_market/: GTM.md
plan/11_legal_docs/: DISCLAIMER.md  (+2 more)
public/: manifest.webmanifest
resources/: README.md
scripts/: generate-assets.js  generate-keystore.ps1  mobile-postbuild.js  mobile-prebuild.js
src/: middleware.ts
supabase/: schema.sql
(+91 files in other folders)
